# keyNote

./: docker-compose.yaml
agent_api/: .env  main.py  pyproject.toml
agent_api/src/: config.py  database.py  excetions.py  main.py  schemas.py
agent_api/src/db/: factory.py
agent_api/src/db/interfaces/: base.py  postgres.py
agent_api/src/models/: events.py
agent_api/src/repositories/: events.py
agent_api/src/routers/: ask.py  events.py  ping.py  transcribe.py
agent_api/src/schemas/api/: events.py
agent_api/src/schemas/embeddings/: jina.py
agent_api/src/services/azure/: client.py  factory.py
agent_api/src/services/embeddings/: factory.py  jina_client.py
agent_api/src/services/groq/: client.py  factory.py
agent_api/src/services/indexing/: chunking.py  hybrid_indexing.py
agent_api/src/services/ollama/: client.py  factory.py
agent_api/src/services/pgvector/: factory.py  pgvector.py
agent_ui/: index.html  package-lock.json  package.json
agent_ui/src/: App.jsx  index.css
agent_ui/src/components/: Calendar.jsx  ChatWindow.jsx  EventDetails.jsx  EventForm.jsx  EventList.jsx  Layout.jsx  Modal.jsx
